Refine & Javadoc services